--- a/http-log/pom.xml
+++ b/http-log/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-http-log</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>2.13.0-SNAPSHOT</version>
+    <version>2.13.0</version>
 
     <name>Camel Quarkus :: Examples :: HTTP Log</name>
     <description>Camel Quarkus Example :: HTTP to Log</description>
