--- a/timer-log-main/pom.xml
+++ b/timer-log-main/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-timer-log-main</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>2.15.0</version>
+    <version>2.16.0-SNAPSHOT</version>
 
     <name>Camel Quarkus :: Examples :: Timer Log Main</name>
     <description>Camel Quarkus Example :: Timer to Log Main</description>
