--- a/jms-jpa/pom.xml
+++ b/jms-jpa/pom.xml
@@ -21,13 +21,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.camel.quarkus.examples</groupId>
     <artifactId>camel-quarkus-examples-jms-jpa</artifactId>
-    <version>2.17.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>Camel Quarkus :: Examples :: JMS JPA</name>
     <description>Camel Quarkus Example :: JMS JPA</description>
     <properties>
-        <quarkus.platform.version>2.16.0.Final</quarkus.platform.version>
-        <camel-quarkus.platform.version>2.17.0-SNAPSHOT</camel-quarkus.platform.version>
-        <quarkiverse-artemis.version>2.0.2</quarkiverse-artemis.version>
+        <quarkus.platform.version>3.0.0.Alpha3</quarkus.platform.version>
+        <camel-quarkus.platform.version>3.0.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkiverse-artemis.version>3.0.0.Alpha5</quarkiverse-artemis.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
