--- a/timer-log-main/pom.xml
+++ b/timer-log-main/pom.xml
@@ -22,14 +22,14 @@
 
     <artifactId>camel-quarkus-examples-timer-log-main</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>2.17.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <name>Camel Quarkus :: Examples :: Timer Log Main</name>
     <description>Camel Quarkus Example :: Timer to Log Main</description>
 
     <properties>
-        <quarkus.platform.version>2.16.0.Final</quarkus.platform.version>
-        <camel-quarkus.platform.version>2.17.0-SNAPSHOT</camel-quarkus.platform.version>
+        <quarkus.platform.version>3.0.0.Alpha3</quarkus.platform.version>
+        <camel-quarkus.platform.version>3.0.0-SNAPSHOT</camel-quarkus.platform.version>
 
         <!-- TODO: https://github.com/apache/camel-quarkus/issues/3156 -->
         <camel-quarkus.version>${camel-quarkus.platform.version}</camel-quarkus.version>
