Upgrade quarkus-artemis to 3.0.0.Alpha7

--- a/jms-jpa/src/main/resources/application.properties
+++ b/jms-jpa/src/main/resources/application.properties
@@ -51,4 +51,4 @@ quarkus.artemis.enabled=true
 #%prod.quarkus.artemis.password=admin
 
 # Quarkus MessagingHub Pooled JMS
-quarkus.pooled-jms.xa.enabled=true
+quarkus.pooled-jms.transaction=xa
