--- a/jms-jpa/pom.xml
+++ b/jms-jpa/pom.xml
@@ -27,7 +27,7 @@
     <properties>
         <quarkus.platform.version>3.1.0.Final</quarkus.platform.version>
         <camel-quarkus.platform.version>3.0.0-SNAPSHOT</camel-quarkus.platform.version>
-        <quarkiverse-artemis.version>3.0.0.Alpha7</quarkiverse-artemis.version>
+        <quarkiverse-artemis.version>3.0.0</quarkiverse-artemis.version>
 
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
