--- a/rest-json/pom.xml
+++ b/rest-json/pom.xml
@@ -22,7 +22,7 @@
 
     <artifactId>camel-quarkus-examples-rest-json</artifactId>
     <groupId>org.apache.camel.quarkus.examples</groupId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.2.0</version>
 
     <name>Camel Quarkus :: Examples :: Rest Json</name>
     <description>Camel Quarkus Example :: Rest Json</description>
