--- a/timer-log-main/pom.xml
+++ b/timer-log-main/pom.xml
@@ -175,10 +175,10 @@
                             <phase>integration-test</phase>
                             <configuration>
                                 <failIfNoTests>false</failIfNoTests>
-                                <systemProperties>
+                                <systemPropertyVariables>
                                     <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                                     <quarkus.runner>${quarkus.runner}</quarkus.runner>
-                                </systemProperties>
+                                </systemPropertyVariables>
                             </configuration>
                         </execution>
                     </executions>
