--- a/jms-jpa/src/main/resources/application.properties
+++ b/jms-jpa/src/main/resources/application.properties
@@ -37,7 +37,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 #%prod.quarkus.hibernate-orm.database.generation=none
 
 # Quarkus Narayana JTA
-quarkus.transaction-manager.object-store-directory=target/narayana
+quarkus.transaction-manager.object-store.directory=target/narayana
 quarkus.transaction-manager.enable-recovery=true
 
 # Camel
